# equip

./: .gitignore  README.md  models.md  models.yaml  pyproject.toml
data/scifact/: queries.jsonl
equip/: __init__.py  config.py  main.py  metrics.py  models.py  storage.py  utils.py  workers.py
equip/annotator/: README.md  __init__.py  __main__.py  annotation_models.py  sampler.py  storage.py  ui.py
equip/commands/: __init__.py  analyze.py  evaluate.py  generate.py
equip/evaluators/: __init__.py  base.py  vllm.py
equip/explorer/: README.md  __init__.py  __main__.py  data_loader.py  ui.py
equip/generators/: __init__.py  base.py  batched.py  gemini.py  gemini_batch.py  openai_batch.py  sglang.py  vllm.py  vllm_online.py
equip/loaders/: __init__.py  base.py  foolmetwice.py  scifact.py  uphill.py
equip/processors/: __init__.py  base.py  harmony.py  qwen.py  splitter.py  standard.py
experiments/: frequency.ipynb  multi-judge.ipynb  resistance.ipynb
